<resources>
    <string name="app_name">Smart Doctor</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="title_activity_container">ScrollingActivity</string>
    <string name="large_text"></string>
    <string name="signup">Signup</string>
    <string name="full_name">Full Name</string>
    <string name="loginhere">Already have an account? <u>Let\'s login now!</u></string>
    <string name="registerhere">Don\'t have an account? <u>Register now!</u></string>
</resources>